2006-12-15  Petr Ovtchenkov  <ptr@island.corbina.net>

	* time.h, time.cc: add timespec in xmt namespace, useful
	for conversions and inline objects; clean some code in
	timespec operations.
	
	* xmt.h: changes related to timespec in xmt namespace and in
	global namespace; now 'delay' functions family only in xmt
	namespace and go away from Thread class.

2006-12-14  Petr Ovtchenkov  <ptr@island.corbina.net>

	* xmt.h, xmt.cc: move 'fork' and 'become_daemon' from Thread
	class directly to namespace xmt; this may block usage
	of compilers without namespaces.

2006-12-13  Petr Ovtchenkov  <ptr@island.corbina.net>

	* thr_mgr.h, thr_mgr.cc: add join method.

2006-11-29  Petr Ovtchenkov  <ptr@island.corbina.net>

	* xmt.h, xmt.cc: added xmt::getpid() and xmt:getppid(); ::getpid()
	really return cached value, so returned pid may be parent's pid
	really. I use syscall here and rewrite appropriate var during
	Thread::fork().

	* uid.h, uid.cc: code reorganization to avoid problems with order
	of static objects dtors calls and libraries unload order.

	* libxmt: version 1.9.3

2006-11-23  Petr Ovtchenkov  <ptr@island.corbina.net>

	* uid.h, uid.cc: return hostid on Linux

	* libxmt: version 1.9.2

2006-10-31  Petr Ovtchenkov  <ptr@island.corbina.net>

	* time.cc: add useful includes, detected when compile
	without STLport.

2006-10-24  Petr Ovtchenkov  <ptr@island.corbina.net>

	* xmt.h, xmt.cc, time.h, time.cc: move timespec functions to
	time.cc; move sleep-like functions from Thread to xmt namespace
	in time.cc.

2006-10-10  Petr Ovtchenkov  <ptr@island.corbina.net>

	* thr_mgr.cc: don't kill not finished threads in ThreadMgr's
	dtor, this lead to whole process termination [I should
	investigate why].

2006-09-22  Petr Ovtchenkov  <ptr@island.corbina.net>

	* xmt.cc: no need to lock around thread creation;
	_state should be setup in goodbit in parent thread,
	not in just created [info in parent, and it should
	be joinable].
