@@ -2,11 +2,13 @@
 
 	* time.h, time.cc: add timespec in xmt namespace, useful
 	for conversions and inline objects; clean some code in
-	timespec operations.
+	timespec operations;
 	
 	* xmt.h: changes related to timespec in xmt namespace and in
 	global namespace; now 'delay' functions family only in xmt
-	namespace and go away from Thread class.
+	namespace and go away from Thread class;
+
+	* xmt.h, xmt.cc: add setting signal handler with siginfo.
 
 2006-12-14  Petr Ovtchenkov  <ptr@island.corbina.net>
 
